--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@
 }
 body {
   background: linear-gradient(#89f7fe 0%, #66a6ff 100%);
-  height: 100vh;
+  height:100vh;
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  padding-top: 15%;
-  align-items: flex-start;
+  padding-top:70px;
+  
 }
 .container {
   width: 250px;
